1.0.2 (?/??/2016):
------------------

- Removed stray debug message ("REALLY setting name!") from sgdisk,
  when setting new name via -c option.

1.0.1 (10/18/2015):
-------------------

- Created uninstall-fixparts and uninstall-gdisk scripts for OS X. As the
  names imply, these scripts remove the files installed by the fixparts and
  gdisk packages, respectively.

- Fixed bug that caused -N/--largest-new option to sgdisk to fail when
  fed a "0" option.

- Fixed bug that caused input glitches in EFI version of gdisk.

- Fixed bug that caused sgdisk to not return an appropriate error code
  when it encountered a write error when saving changes.

- Fixed bug that caused cgdisk's "Info" display to under-report the
  partition's size by one sector.

- OS X 10.11 includes new security features that prevent GPT fdisk from
  working unless these features are disabled. To do so, you must boot to a
  Recovery HD system, open a Terminal, type "csrutil disable", and reboot
  into the normal system. You can re-enable the security features by
  repeating the process, but specify "enable" rather than "disable". I've
  added a message pointing users to a Web page explaining how to disable
  this feature when gdisk detects that it can't write to the disk under OS
  X. If you know of a way around this (including code changes to gdisk),
  please contact me.

- I've updated the OS X installation location from the Unix-standard
  /usr/sbin (and related locations for documentation) to /usr/local/bin
  (and related locations for documentation). This is Just Plain Crazy from
  a Unix point of view, but Apple has to be Apple and do things just a
  little bit differently.

- I've updated my OS X environment to OS X 10.11 and LLVM 7.0.0. This has
  also meant installing fresh versions of popt and ncurses from MacPorts,
  which may require upgrading popt to get sgdisk working on some systems.
  (gdisk, cgdisk, and fixparts should continue to work normally on all